fixed topic name overflow

--- a/frontend/src/components/topics_page/TopicsPage.scss
+++ b/frontend/src/components/topics_page/TopicsPage.scss
@@ -32,6 +32,7 @@
         flex: 5;
         @include displayFlex(column, center, flex-start);
         gap: 15px;
+        overflow: hidden;
 
         .topic-name {
           width: 100%;
